--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "my-needle-engine-project",
-  "version": "1.0.0",
-  "type" : "module",
-  "scripts": {
-    "start": "vite --host",
-    "build:dev": "vite build",
-    "build:production": "npm run build:dev && npm run gltf:transform",
-    "gltf:transform": "npm run transform --prefix node_modules/@needle-tools/gltf-build-pipeline"
-  },
-  "dependencies": {
-	  "@needle-tools/engine": "^3.35.0-beta",
-	  "three": "npm:@needle-tools/three@^0.162.1"
+	"name": "nextjs-template",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --experimental-https",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
 	},
-  "devDependencies": {
-	  "@needle-tools/helper": "^1.7.0-beta.2",
-	  "@types/three": "0.162.0",
-	  "@vitejs/plugin-basic-ssl": "^1.0.1",
-	  "typescript": "^5.0.4",
-	  "vite": "<= 4.3.9",
-	  "vite-plugin-compression": "^0.5.1",
-	  "@needle-tools/editor-sync": "^2.0.3-beta"
+	"dependencies": {
+	  "@babel/runtime": "^7.16.0",
+	  "@needle-tools/engine": "^3.35.0-beta",
+	  "@types/node": "18.15.11",
+	  "@types/react": "18.0.35",
+	  "@types/react-dom": "18.0.11",
+	  "autoprefixer": "10.4.14",
+	  "eslint": "8.38.0",
+	  "eslint-config-next": "13.3.0",
+	  "next": "^14.1.0",
+	  "postcss": "8.4.21",
+	  "react": "18.2.0",
+	  "react-dom": "18.2.0",
+	  "tailwindcss": "3.3.1",
+	  "typescript": "5.0.4",
+	  "three": "npm:@needle-tools/three@^0.162.1"
 	}
 }
